<package format="2">
  <name>gbot_seeds</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for gbot_seeds</p>
    <p>This package contains configuration data, 3D models and launch files
for gbot_seeds robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="jepeloa@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>usb_cam</depend>
  <depend>rosbag</depend>
  <export>
    <architecture_independent />
  </export>
</package>